# MykaEngine

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Deps.h  ImGuiManager.cpp  ImGuiManager.h  Main.cpp  Mesh.cpp  Mesh.h  MeshLibrary.cpp  MeshLibrary.h  MykaEngine.sln  MykaEngine.vcxproj  MykaEngine.vcxproj.filters  PhysicalObject.cpp  PhysicalObject.h  PhysicsEngine.cpp  PhysicsEngine.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TimeManager.cpp  TimeManager.h  VertexBuffer.h  defaultFrag.glsl  defaultVert.glsl  engine.txt  imgui.ini
Game/src/: Deps.hpp  main.cpp
MykaEngine/: CMakeLists.txt
MykaEngine/include/: GameObject.hpp  Renderer.hpp  Texture.hpp  Timer.hpp  myka_camera.hpp  myka_game_object.hpp  myka_index_buffer.hpp  myka_light.hpp  myka_logger.hpp  myka_material.hpp  myka_mesh.hpp  myka_renderer.hpp  myka_scene.hpp  myka_shader.hpp  myka_texture.hpp  myka_timer.hpp  myka_transform.hpp  myka_vertex_array.hpp  myka_vertex_buffer.hpp  myka_window.hpp
MykaEngine/src/: Shader.cpp  Timer.cpp  VertexArray.cpp  myka_camera.cpp  myka_game_object.cpp  myka_index_buffer.cpp  myka_light.cpp  myka_logger.cpp  myka_material.cpp  myka_mesh.cpp  myka_renderer.cpp  myka_scene.cpp  myka_shader.cpp  myka_texture.cpp  myka_timer.cpp  myka_transform.cpp  myka_vertex_array.cpp  myka_vertex_buffer.cpp  myka_window.cpp
shaders/: colorFrag.glsl  colorVert.glsl  defaultFrag.glsl  defaultVert.glsl  defaultlFrag.glsl  lightFrag.glsl  lightVert.glsl  texFrag.glsl  texVert.glsl
src/: Camera.cpp  Camera.hpp  Deps.hpp  GameObject.cpp  GameObject.hpp  Transform.cpp  Transform.hpp  main.cpp  myka_window.cpp  myka_window.hpp
src/Renderer/: IndexBuffer.cpp  IndexBuffer.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
